# Ocean_Eterna_4.3

./: .gitignore  CHANGELOG.md  LICENSE  README.md  doc_processor.py  mcp_requirements.txt  pyproject.toml  server.json  start_demo.sh
benchmarks/: benchmark.py  generate_corpus.py  mock_llm.py
chat/: accuracy_test.py  binary_manifest.hpp  bm25s_engine.hpp  config.hpp  config.json  convert_manifest.cpp  llm_client.hpp  ocean_chat_server.cpp  porter_stemmer.hpp  reranker_sidecar.py  search_engine.hpp  test_binary_manifest.cpp  test_v3.py  test_v42.py
integrations/ironclaw/: mcp_config.json
integrations/picoclaw/: oe_skill.sh
src/ocean_eterna_mcp/: __init__.py  server.py
tidepool/: README.md  category_store.py  classifier.py  server.py
tidepool/tests/: test_double_helix.py
